--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,3 +22,11 @@
     margin-top: 60px;
     font-size: 25px;
 }
+
+.player-indicator {
+    font-size: 30px;
+    margin-top: 50px;
+    position: fixed;
+    left: 50px;
+    top: 200px;
+}
